app/assets/stylesheets/new_dashboard.css.scss
/* ... */
.uploader-text {
  color: #AAA;
  z-index: 1;
  font-size: 12px;

  &.one-more {
    color: $secondary-color;
    text-align: center;
  }
}

.variations-label {
  margin-bottom: 8px;
  font-size: 14px;
  color: #646464;
  letter-spacing: 0.5px;
  font-weight: 500;
}

.note-archived {
  margin-bottom: 8px;
  font-size: 10px;
  color: #646464;
  letter-spacing: 0.5px;
  font-weight: bold;
}

#variations-container .variation-element {
  border-bottom: 1px solid #999999;

  &:last-child {
    border-bottom: 0;
  }
}

.image-slider-container img {
  height: 300px;
  max-width: 421px;
  max-height: 300px;
}

.draggable-container {
  max-height: 270px;
  max-width: 126px;
  overflow-y: hidden;
}

.center {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.center:before {
  content: "";
  filter: blur(2px);
  position: absolute;
  background-color: rgba(255, 255, 255, .9);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.logo-integration-platform {
  width: 350px;
  height: 98px;
}

.cookie__box {
  height: 22px;
  color: #FFF;
  border-radius: 7px;
  text-align: center;
  font-size: 12px;
  margin-left: 8px;

  &__blue {
    background-color: $secondary-color;
  }

  &__green {
    background-color: #1DBF73;
  }
}

// Onboarding
#onboarding {
  z-index: 100;

  .modal__background:hover {
    cursor: unset;
  }

  .modal__window {
    height: unset;
    max-width: 450px;
  }

  .onboarding {
    &__arrow {
      position: absolute;
      bottom: 0;
      z-index: 10;
      font-size: 25px;

      &:hover {
        cursor: pointer;
      }

      &--previous {
        left: 34px;
      }

      &--next {
        right: 34px;
      }
    }

    &__btn--start {
      display: inline-block;
      padding: 2px 4px;
      border: 2px solid #fff;
      border-radius: 5px;
      margin-top: 16px;
      color: #fff;
    }

    &__img {
      width: 60%;
      margin: auto;
      margin-bottom: 32px;
    }

    &__step {
      height: calc(80vh - 0px);
      max-height: 670px;
      overflow-y: auto;
      &--first {
        background-image: url(image_path('dashboard/onboarding/7.png'));
      }
    }
  }

  .slick-dots li button:before {
    content: '•';
    font-size: 18px;
    line-height: 20px;
    top: -9px;
    opacity: unset;
    color: white;
  }

  .slick-dots li.slick-active button::before {
    opacity: .75;
    color: black;
  }
}

.step {
  &__body {
    height: calc(100% - 265px);
  }

  h2 {
    transform: translateY(-16px);
  }
}

.order_items, .variations {
  display: none;
  background-color: #F5F5FA;
  padding-bottom: 20px;
  border-radius: 5px;
}

.toggle_order_items:checked + .order_items {
  display: block;
}

.toggle_variations:checked + .variations {
  display: table;
}

.not-found-image {
  max-height: 700px;
  width: 100%;
}

.no-style-filter {
  align-self: center;

  a {
    text-decoration: none;
    color: $secondary-color;
  }
}

.meli-status-filter {
  cursor: pointer;
}

.filter-button {
  position: absolute;
  right: 0px;
  top: 20px;
}

#meli-status-cont {
  margin-left: -10px !important;
}

@media screen and (min-height: 780px) {
  #onboarding {
    .onboarding {
      &__step {
        overflow-y: hidden;
      }
    }
  }
}

@media screen and (max-width: 1366px) {
  #sidebar {
    width: 250px;

    .menu {
      padding-left: 22px;
    }
  }

  #content {
    margin-left: 250px;
  }

  .product {
    font-size: 13px;
  }
}

@media screen and (max-width: 1024px) {
  #sidebar {
    top: 64px;
    left: -300px;
    width: 300px;

    &__logo {
      display: none;
    }
  }

  #sidebar--toggle:checked ~ #sidebar {
    left: 0;
  }

  .header--dashboard {
    background-color: #FFF;
    position: fixed;
    top: 0;
    left: 0;
    margin: 0;
    width: 100vw;
    z-index: 101;
    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);
    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);

    .retailer {
      &__info {
        display: none;
      }
    }

    .dropdown__menu {
      right: 0;
    }
  }

  #content {
    margin-top: 82px;
  }

  #content {
    margin-left: 0;
  }

  .index__ctas {
    text-align: center;
    margin-top: 24px;
  }

  .products {
    .table {
      margin-top: 12px;
    }
  }

  .user__dropdown {
    .dropdown__menu {
      position: fixed;
    }
  }

  .product {
    &__info {
      border-right: 0;
    }

    &__info + div {
      padding-left: 8px;
    }
  }

  .info__details {
    .table_details {
      margin-left: auto;
      margin-right: auto;
    }
  }
}

@media screen and (max-width: $screen-sm) {
  .index__ctas {
    &.f-right {
      float: none;
    }
  }

  .product {
    padding: 0 8px;
  }

  .variation_details {
    transform: translateY(12px);
    display: inline-block;
  }
}

@media screen and (max-width: 767px) {
  #meli-status-cont {
    margin-left: 0px !important;
  }
}

@media screen and (max-width: 480px) {
  .table__item .item__descriptor {
    text-align: left;
  }
}

@media screen and (min-width: 406px) and (max-width: 424px) {
  .preview_holder {
    width: 100px;
  }

  .uploader {
    width: 100px;
  }
}

@media screen and (min-width: 402px) and (max-width: 405px) {
  .preview_holder {
    width: 90px;
  }

  .uploader {
    width: 90px;
  }
}

@media screen and (min-width: 381px) and (max-width: 401px) {
  .preview_holder {
    width: 90px;
  }

  .uploader {
    width: 90px;
  }
}

@media screen and (max-width: 380px) {
  .button-sm-and-down {
    text-align: center;

    a {
      font-size: 10px;
    }
  }

  .preview_holder {
    width: 82px;
  }

  .uploader {
    width: 82px;
  }

  .uploader-text.one-more {
    font-size: 10px;
  }
}

@media screen and (min-width: 348px) and (max-width: 351px) {
  .uploader {
    width: 77px;
  }
}
/* ... */

